crates/sources/src/scenarios/snapshots/sources__scenarios__test__dekaf_invalid-3.snap
---
source: crates/sources/src/scenarios/mod.rs
assertion_line: 63
expression: tables
---
DraftCatalog
