crates/sources/src/scenarios/snapshots/sources__scenarios__test__deletions-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    captures: [
        DraftCapture {
            capture: deleted/capture,
            scope: test://example/catalog.yaml#/captures/deleted~1capture,
            expect_pub_id: "0011223344556677",
            model: NULL,
        },
    ],
    collections: [
        DraftCollection {
            collection: deleted/collection,
            scope: test://example/catalog.yaml#/collections/deleted~1collection,
            expect_pub_id: "0011223344556677",
            model: NULL,
        },
    ],
    materializations: [
        DraftMaterialization {
            materialization: deleted/materialization,
            scope: test://example/catalog.yaml#/materializations/deleted~1materialization,
            expect_pub_id: "0011223344556677",
            model: NULL,
        },
    ],
    tests: [
        DraftTest {
            test: deleted/test,
            scope: test://example/catalog.yaml#/tests/deleted~1test,
            expect_pub_id: "0011223344556677",
            model: NULL,
        },
    ],
}
