crates/sources/src/scenarios/snapshots/sources__scenarios__test__deletions-3.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    captures: [
        DraftCapture {
            capture: deleted/capture,
            scope: test://example/catalog.yaml#/captures/deleted~1capture,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: NULL,
            is_touch: 0,
        },
    ],
    collections: [
        DraftCollection {
            collection: deleted/collection,
            scope: test://example/catalog.yaml#/collections/deleted~1collection,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: NULL,
            is_touch: 0,
        },
    ],
    materializations: [
        DraftMaterialization {
            materialization: deleted/materialization,
            scope: test://example/catalog.yaml#/materializations/deleted~1materialization,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: NULL,
            is_touch: 0,
        },
    ],
    tests: [
        DraftTest {
            test: deleted/test,
            scope: test://example/catalog.yaml#/tests/deleted~1test,
            expect_pub_id: "0011223344556677",
            model: NULL,
            is_touch: 0,
        },
    ],
}
