crates/sources/src/scenarios/snapshots/sources__scenarios__test__json_catalog-3.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    captures: [
        DraftCapture {
            capture: acmeCo/json-capture,
            scope: test://example/nested/flow.json#/captures/acmeCo~1json-capture,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": "json-capture.config.json"
                }
              },
              "bindings": [
                {
                  "resource": "json-capture.resource.0.config.json",
                  "target": "acmeCo/collection"
                }
              ]
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: acmeCo/yaml-capture,
            scope: test://example/catalog.yaml#/captures/acmeCo~1yaml-capture,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": "yaml-capture.config.yaml"
                }
              },
              "bindings": []
            },
            is_touch: 0,
        },
    ],
    collections: [
        DraftCollection {
            collection: acmeCo/collection,
            scope: test://example/nested/flow.json#/collections/acmeCo~1collection,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "collection.schema.json",
              "key": [
                "/key"
              ]
            },
            is_touch: 0,
        },
        DraftCollection {
            collection: acmeCo/derivation,
            scope: test://example/nested/flow.json#/collections/acmeCo~1derivation,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "derivation.schema.json",
              "key": [
                "/key"
              ],
              "derive": {
                "using": {
                  "sqlite": {}
                },
                "transforms": [
                  {
                    "name": "fromCollection",
                    "source": "acmeCo/collection",
                    "shuffle": "any",
                    "lambda": "derivation.lambda.fromCollection.sql"
                  }
                ]
              }
            },
            is_touch: 0,
        },
    ],
    materializations: [
        DraftMaterialization {
            materialization: acmeCo/json-materialization,
            scope: test://example/nested/flow.json#/materializations/acmeCo~1json-materialization,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": "json-materialization.config.json"
                }
              },
              "bindings": [
                {
                  "resource": "json-materialization.resource.0.config.json",
                  "source": "acmeCo/collection",
                  "fields": {
                    "recommended": true
                  }
                }
              ]
            },
            is_touch: 0,
        },
    ],
    tests: [
        DraftTest {
            test: acmeCo/json-test,
            scope: test://example/nested/flow.json#/tests/acmeCo~1json-test,
            expect_pub_id: NULL,
            model: {
              "steps": [
                {
                  "ingest": {
                    "collection": "acmeCo/collection",
                    "documents": "json-test.step.0.json"
                  }
                }
              ]
            },
            is_touch: 0,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1yaml-capture/endpoint/connector/config,
            to_resource: test://example/yaml-capture.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/import/0,
            to_resource: test://example/nested/flow.json,
        },
        Import {
            scope: test://example/nested/flow.json#/captures/acmeCo~1json-capture/bindings/0/resource,
            to_resource: test://example/nested/json-capture.resource.0.config.json,
        },
        Import {
            scope: test://example/nested/flow.json#/captures/acmeCo~1json-capture/endpoint/connector/config,
            to_resource: test://example/nested/json-capture.config.json,
        },
        Import {
            scope: test://example/nested/flow.json#/collections/acmeCo~1collection/schema,
            to_resource: test://example/nested/collection.schema.json,
        },
        Import {
            scope: test://example/nested/flow.json#/collections/acmeCo~1derivation/derive/transforms/0/lambda,
            to_resource: test://example/nested/derivation.lambda.fromCollection.sql,
        },
        Import {
            scope: test://example/nested/flow.json#/collections/acmeCo~1derivation/schema,
            to_resource: test://example/nested/derivation.schema.json,
        },
        Import {
            scope: test://example/nested/flow.json#/materializations/acmeCo~1json-materialization/bindings/0/resource,
            to_resource: test://example/nested/json-materialization.resource.0.config.json,
        },
        Import {
            scope: test://example/nested/flow.json#/materializations/acmeCo~1json-materialization/endpoint/connector/config,
            to_resource: test://example/nested/json-materialization.config.json,
        },
        Import {
            scope: test://example/nested/flow.json#/tests/acmeCo~1json-test/0/documents,
            to_resource: test://example/nested/json-test.step.0.json,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"import":["nested/flow.json"],"captures":{"acmeCo/yaml-capture":{"endpoint":{"connector":{"image":"an/image","config":"yaml-capture.config.yaml"}},"bindings":[]}}},
        },
        Resource {
            resource: test://example/nested/collection.schema.json,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/nested/flow.json?ptr=/collections/acmeCo~1collection/schema","properties":{"key":{"type":"string"}},"type":"object"},
        },
        Resource {
            resource: test://example/nested/derivation.lambda.fromCollection.sql,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "select 'a long string which makes this a larger lambda';",
        },
        Resource {
            resource: test://example/nested/derivation.schema.json,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/nested/flow.json?ptr=/collections/acmeCo~1derivation/schema","properties":{"key":{"type":"string"}},"type":"object"},
        },
        Resource {
            resource: test://example/nested/flow.json,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"captures":{"acmeCo/json-capture":{"endpoint":{"connector":{"image":"an/image","config":"json-capture.config.json"}},"bindings":[{"resource":"json-capture.resource.0.config.json","target":"acmeCo/collection"}]}},"collections":{"acmeCo/collection":{"schema":"collection.schema.json","key":["/key"]},"acmeCo/derivation":{"schema":"derivation.schema.json","key":["/key"],"derive":{"using":{"sqlite":{}},"transforms":[{"name":"fromCollection","source":"acmeCo/collection","shuffle":"any","lambda":"derivation.lambda.fromCollection.sql"}]}}},"materializations":{"acmeCo/json-materialization":{"endpoint":{"connector":{"image":"an/image","config":"json-materialization.config.json"}},"bindings":[{"resource":"json-materialization.resource.0.config.json","source":"acmeCo/collection","fields":{"recommended":true}}]}},"tests":{"acmeCo/json-test":{"steps":[{"ingest":{"collection":"acmeCo/collection","documents":"json-test.step.0.json"}}]}}},
        },
        Resource {
            resource: test://example/nested/json-capture.config.json,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"bucket":"a-bucket-name-which-is-long-enough"},
        },
        Resource {
            resource: test://example/nested/json-capture.resource.0.config.json,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"stream":"a-stream-name-which-is-long-enough"},
        },
        Resource {
            resource: test://example/nested/json-materialization.config.json,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"table_prefix":"a-table-prefix-which-is-long-enough"},
        },
        Resource {
            resource: test://example/nested/json-materialization.resource.0.config.json,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"table":"a-table-name-which-is-long-enough"},
        },
        Resource {
            resource: test://example/nested/json-test.step.0.json,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: [{"key":"a-key-which-is-long-enough"}],
        },
        Resource {
            resource: test://example/yaml-capture.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"bucket":"a-bucket-name-which-is-long-enough"},
        },
    ],
}
