crates/sources/src/scenarios/snapshots/sources__scenarios__test__schema_with_anchors-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: test,
            scope: test://example/catalog.yaml#/collections/test,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": {"$defs":{"lowercase":{"$anchor":"lowercase","type":"integer"},"matches":{"$anchor":"Match_es","type":"integer"},"punctuation":{"$anchor":"Spa ce","type":"integer"}},"$id":"test://example/schema.json","type":"string"},
              "key": [
                "/a"
              ]
            },
            is_touch: 0,
        },
    ],
}
