crates/sources/src/scenarios/snapshots/sources__scenarios__test__storage_mappings-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
Sources {
    captures: [],
    collections: [],
    errors: [],
    fetches: [],
    imports: [],
    materializations: [],
    resources: [],
    storage_mappings: [
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/,
            prefix: ,
            stores: [
              {
                "provider": "S3",
                "bucket": "root-bucket",
                "prefix": null
              }
            ],
        },
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/foo~1bar~1baz~1,
            prefix: foo/bar/baz/,
            stores: [
              {
                "provider": "GCS",
                "bucket": "a-bucket",
                "prefix": "and-prefix/"
              },
              {
                "provider": "S3",
                "bucket": "s3-bucket",
                "prefix": null
              }
            ],
        },
        StorageMapping {
            scope: test://example/catalog.yaml#/storageMappings/other~1thing~1,
            prefix: other/thing/,
            stores: [
              {
                "provider": "AZURE",
                "bucket": "s3-bucket",
                "prefix": null
              }
            ],
        },
    ],
    tests: [],
}
